--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,28 +1,40 @@
 @import url(http://fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,400,700);
-/*
-  Fonts
-*/
-/*
-  Globals
-*/
+html {
+  height: 100%;
+  min-height: 100%;
+  font-size: 100%; }
+
 body {
   margin: 0;
-  background: #556270;
+  height: 100%;
+  min-height: 100%;
+  background: #ffffff;
   color: #353d46;
   font-family: 'Open Sans', sans-serif; }
-
-h1, h2, h3 {
-  color: #FF6B6B;
-  margin: 0 0 27px; }
 
 .container {
   padding-left: 0px;
   padding-right: 0px;
   width: 100%; }
 
-/*
-  Header
-*/
+.box-container .box-head {
+  background: #354e6f;
+  color: #ffffff;
+  font-size: 14px;
+  font-weight: bold;
+  padding: 5px; }
+.box-container .box-body {
+  background: #e3e3e6;
+  color: #333333;
+  padding: 5px;
+  border-bottom: 1px solid #c6c6c7; }
+.box-container .box-foot {
+  background: #354e6f;
+  color: #ffffff;
+  font-size: 14px;
+  font-weight: bold;
+  padding: 5px; }
+
 #header {
   background: #354e6f;
   height: 85px;
@@ -58,37 +70,7 @@ h1, h2, h3 {
       position: absolute;
       top: 0;
       right: 10px; }
-    #header div.head-right div.right-trigger {
-      width: 36px;
-      height: 36px;
-      background: #5b944c;
-      cursor: pointer;
-      border-radius: 5px;
-      -moz-transition: all 300ms;
-      -webkit-transition: all 300ms;
-      transition: all 300ms; }
-      #header div.head-right div.right-trigger:before {
-        content: '\002B';
-        display: inline-block;
-        width: 36px;
-        height: 36px;
-        color: white;
-        font-family: "ico";
-        font-style: normal;
-        font-size: 1.2em;
-        font-weight: normal;
-        font-variant: normal;
-        text-align: center;
-        text-transform: none;
-        line-height: 36px; }
-      #header div.head-right div.right-trigger:hover {
-        background: #5b944c; }
-        #header div.head-right div.right-trigger:hover:before {
-          color: #fcfeff; }
 
-/*
-  Search
-*/
 #search input.search-box {
   background: white url("../imgs/icons/search.png") no-repeat 10px 5px;
   border: none;
@@ -114,34 +96,57 @@ h1, h2, h3 {
 #search input.search-box:-ms-input-placeholder {
   color: #9f9f9f; }
 
-.row-head {
-  background: #354e6f;
-  color: #ffffff;
-  font-size: 14px;
-  font-weight: bold;
-  padding: 5px; }
-
-/* forumhome's forum bit */
-.forum-bit {
-  padding-left: 5px;
-  border-bottom: 1px solid #ffffff; }
-  .forum-bit div.forum-bit-wrap {
+#forums-list {
+  border-bottom: 1px solid #c6c6c7;
+  margin-bottom: 15px; }
+  #forums-list .box-container .box-body {
     background: #e3e3e6;
-    padding: 10px;
-    cursor: pointer; }
-    .forum-bit div.forum-bit-wrap a:link, .forum-bit div.forum-bit-wrap a:visited, .forum-bit div.forum-bit-wrap :hover {
-      text-decoration: none; }
-    .forum-bit div.forum-bit-wrap div.forum-title {
-      color: #084b82;
-      font-weight: bold;
-      font-size: 16px; }
-    .forum-bit div.forum-bit-wrap div.forum-summary {
-      color: #333333;
-      font-size: 14px; }
+    color: #333333;
+    padding: 0px;
+    border-bottom: none; }
+  #forums-list div.forum-bit {
+    padding-left: 5px;
+    border-bottom: 1px solid #ffffff; }
+    #forums-list div.forum-bit div.forum-bit-wrap {
+      background: #e3e3e6;
+      padding: 10px;
+      cursor: pointer; }
+      #forums-list div.forum-bit div.forum-bit-wrap a:link, #forums-list div.forum-bit div.forum-bit-wrap a:visited, #forums-list div.forum-bit div.forum-bit-wrap :hover {
+        text-decoration: none; }
+      #forums-list div.forum-bit div.forum-bit-wrap div.forum-title {
+        color: #084b82;
+        font-weight: bold;
+        font-size: 16px; }
+      #forums-list div.forum-bit div.forum-bit-wrap div.forum-summary {
+        color: #333333;
+        font-size: 14px; }
 
-/* forumhome's forumbit post status (vbulletin lightbulbs) */
 .status-new {
   background: #499551; }
 
 .status-old {
   background: #9fc1a5; }
+
+#whos-online p {
+  margin: 0;
+  padding: 0;
+  font-size: 14px;
+  text-align: center; }
+#whos-online p.active-text {
+  font-weight: bold;
+  margin-bottom: 10px; }
+#whos-online div.box-body {
+  padding: 15px; }
+
+#footer {
+  background: #354e6f;
+  color: #ffffff;
+  padding: 15px;
+  width: 100%;
+  text-align: center;
+  margin-top: 15px;
+  font-size: 11px; }
+  #footer a:link, #footer a:visited, #footer a:hover {
+    font-size: 14px;
+    font-weight: bold;
+    color: #ffffff; }
