--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,23 +1,21 @@
-
-/*
-  Fonts
-*/
-
+// Fonts
 @import url(http://fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,400,700);
 
-/*
-  Globals
-*/
+// Globals
+html {
+  height: 100%;
+  min-height: 100%;
+  font-size: 100%;
+}
 
 body {
   margin: 0;
-  background: #556270;
+  height: 100%;
+  min-height: 100%;
+  background: #ffffff;
   color: #353d46;
-  //font: 18px/27px 'Oxygen', sans-serif;
   font-family: 'Open Sans', sans-serif;
 }
-
-h1, h2, h3 { color: #FF6B6B; margin: 0 0 27px; }
 
 // removes default bootstrap padding
 .container {
@@ -26,16 +24,36 @@ h1, h2, h3 { color: #FF6B6B; margin: 0 0 27px; }
   width: 100%;
 }
 
-/*
-  Header
-*/
+// reusables
+.box-container {
+  .box-head {
+    background: #354e6f;
+    color: #ffffff;
+    font-size: 14px;
+    font-weight: bold;
+    padding: 5px;
+  }
+  .box-body {
+    background: #e3e3e6;
+    color: #333333;
+    padding: 5px;
+    border-bottom:1px solid #c6c6c7;
+  }
+  .box-foot {
+    background: #354e6f;
+    color: #ffffff;
+    font-size: 14px;
+    font-weight: bold;
+    padding: 5px;
+  }
+}
 
+// Header Content
 #header {
   background: #354e6f;
   height: 85px;
   padding-top: 10px;
   padding-bottom: 10px;
-
 
   div.head-left {
     float: left;
@@ -79,44 +97,11 @@ h1, h2, h3 { color: #FF6B6B; margin: 0 0 27px; }
       top: 0;
       right: 10px;
     }
-
-    div.right-trigger {
-      width: 36px;
-      height: 36px;
-      background: #5b944c;
-      cursor: pointer;
-      border-radius: 5px;
-
-      -moz-transition: all 300ms;
-      -webkit-transition: all 300ms;
-      transition: all 300ms;
-
-      &:before {
-        content: '\002B';
-        display: inline-block;
-        width: 36px;
-        height: 36px;
-        color: white;
-        font-family: "ico";
-        font-style: normal;
-        font-size: 1.2em;
-        font-weight: normal;
-        font-variant: normal;
-        text-align: center;
-        text-transform: none;
-        line-height: 36px;
-      }
-
-      &:hover { background: #5b944c; &:before { color: #fcfeff; } }
-    }
   }
 
 }
 
-/*
-  Search
-*/
-
+// Search Box
 #search {
 
   input.search-box {
@@ -154,45 +139,85 @@ h1, h2, h3 { color: #FF6B6B; margin: 0 0 27px; }
   }
 }
 
+// Forumhome's Forum Listings
+#forums-list {
+  border-bottom:1px solid #c6c6c7;
+  margin-bottom: 15px;
 
-.row-head {
-  background: #354e6f;
-  color: #ffffff;
-  font-size: 14px;
-  font-weight: bold;
-  padding: 5px;
-}
-
-/* forumhome's forum bit */
-.forum-bit {
-  padding-left: 5px;
-  border-bottom: 1px solid #ffffff;
-
-  div.forum-bit-wrap {
+  // remove default box padding
+  .box-container .box-body {
     background: #e3e3e6;
-    padding: 10px;
-    cursor: pointer;
+    color: #333333;
+    padding: 0px;
+    border-bottom:none;
+  }
 
-    a:link, a:visited, :hover {
-      text-decoration: none;
-    }
+  div.forum-bit {
+    padding-left: 5px;
+    border-bottom: 1px solid #ffffff;
 
-    div.forum-title {
-      color: #084b82;
-      font-weight: bold;
-      font-size: 16px;
-    }
-    div.forum-summary {
-      color: #333333;
-      font-size: 14px;
+    div.forum-bit-wrap {
+      background: #e3e3e6;
+      padding: 10px;
+      cursor: pointer;
+
+      a:link, a:visited, :hover {
+        text-decoration: none;
+      }
+
+      div.forum-title {
+        color: #084b82;
+        font-weight: bold;
+        font-size: 16px;
+      }
+      div.forum-summary {
+        color: #333333;
+        font-size: 14px;
+      }
     }
   }
 }
 
-/* forumhome's forumbit post status (vbulletin lightbulbs) */
+// Forumhome's Post Status
 .status-new {
   background: #499551;
 }
 .status-old {
   background: #9fc1a5;
+}
+
+// Who's online box
+#whos-online {
+  p {
+    margin: 0;
+    padding: 0;
+    font-size: 14px;
+    text-align: center;
+  }
+
+  p.active-text {
+    font-weight: bold;
+    margin-bottom: 10px;
+  }
+
+  div.box-body {
+    padding: 15px;
+  }
+}
+
+// Footer Content
+#footer {
+  background: #354e6f;
+  color: #ffffff;
+  padding:15px;
+  width: 100%;
+  text-align: center;
+  margin-top: 15px;
+  font-size: 11px;
+
+  a:link, a:visited, a:hover {
+    font-size: 14px;
+    font-weight: bold;
+    color: #ffffff;
+  }
 }
