--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,4 +1,6 @@
 @import url(http://fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,400,700);
+@import url(./forumhome.css);
+@import url(./menus.css);
 html {
   height: 100%;
   min-height: 100%;
@@ -70,73 +72,6 @@ body {
       position: absolute;
       top: 0;
       right: 10px; }
-
-#search input.search-box {
-  background: white url("../imgs/icons/search.png") no-repeat 10px 5px;
-  border: none;
-  width: 100%;
-  height: 30px;
-  padding-left: 40px;
-  padding-right: 40px;
-  padding-top: 5px;
-  padding-bottom: 5px;
-  -moz-box-sizing: border-box;
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box; }
-#search input.search-box::-webkit-input-placeholder {
-  color: #9f9f9f;
-  font-size: 15px;
-  font-weight: normal; }
-#search input.search-box:-moz-placeholder {
-  /* Firefox 18- */
-  color: #9f9f9f; }
-#search input.search-box::-moz-placeholder {
-  /* Firefox 19+ */
-  color: #9f9f9f; }
-#search input.search-box:-ms-input-placeholder {
-  color: #9f9f9f; }
-
-#forums-list {
-  border-bottom: 1px solid #c6c6c7;
-  margin-bottom: 15px; }
-  #forums-list .box-container .box-body {
-    background: #e3e3e6;
-    color: #333333;
-    padding: 0px;
-    border-bottom: none; }
-  #forums-list div.forum-bit {
-    padding-left: 5px;
-    border-bottom: 1px solid #ffffff; }
-    #forums-list div.forum-bit div.forum-bit-wrap {
-      background: #e3e3e6;
-      padding: 10px;
-      cursor: pointer; }
-      #forums-list div.forum-bit div.forum-bit-wrap a:link, #forums-list div.forum-bit div.forum-bit-wrap a:visited, #forums-list div.forum-bit div.forum-bit-wrap :hover {
-        text-decoration: none; }
-      #forums-list div.forum-bit div.forum-bit-wrap div.forum-title {
-        color: #084b82;
-        font-weight: bold;
-        font-size: 16px; }
-      #forums-list div.forum-bit div.forum-bit-wrap div.forum-summary {
-        color: #333333;
-        font-size: 14px; }
-
-.status-new {
-  background: #499551; }
-
-.status-old {
-  background: #9fc1a5; }
-
-#whos-online p {
-  margin: 0;
-  padding: 0;
-  font-size: 14px;
-  text-align: center; }
-#whos-online p.active-text {
-  font-weight: bold;
-  margin-bottom: 10px; }
-#whos-online div.box-body {
-  padding: 15px; }
 
 #footer {
   background: #354e6f;
