--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,6 +1,10 @@
 // Fonts
 @import url(http://fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,400,700);
 
+// Import Styles
+@import url(./forumhome.css);
+@import url(./menus.css);
+
 // Globals
 html {
   height: 100%;
@@ -99,110 +103,6 @@ body {
     }
   }
 
-}
-
-// Search Box
-#search {
-
-  input.search-box {
-    background: #fff url("../imgs/icons/search.png") no-repeat 10px 5px;
-    border: none;
-    width: 100%;
-    height: 30px;
-    padding-left: 40px;
-    padding-right: 40px;
-    padding-top: 5px;
-    padding-bottom: 5px;
-
-    -moz-box-sizing:border-box;
-    -webkit-box-sizing:border-box;
-    box-sizing:border-box;
-  }
-
-  input.search-box::-webkit-input-placeholder {
-    color: #9f9f9f;
-    font-size: 15px;
-    font-weight: normal;
-
-  }
-
-  input.search-box:-moz-placeholder { /* Firefox 18- */
-    color: #9f9f9f;
-  }
-
-  input.search-box::-moz-placeholder {  /* Firefox 19+ */
-    color: #9f9f9f;
-  }
-
-  input.search-box:-ms-input-placeholder {
-    color: #9f9f9f;
-  }
-}
-
-// Forumhome's Forum Listings
-#forums-list {
-  border-bottom:1px solid #c6c6c7;
-  margin-bottom: 15px;
-
-  // remove default box padding
-  .box-container .box-body {
-    background: #e3e3e6;
-    color: #333333;
-    padding: 0px;
-    border-bottom:none;
-  }
-
-  div.forum-bit {
-    padding-left: 5px;
-    border-bottom: 1px solid #ffffff;
-
-    div.forum-bit-wrap {
-      background: #e3e3e6;
-      padding: 10px;
-      cursor: pointer;
-
-      a:link, a:visited, :hover {
-        text-decoration: none;
-      }
-
-      div.forum-title {
-        color: #084b82;
-        font-weight: bold;
-        font-size: 16px;
-      }
-      div.forum-summary {
-        color: #333333;
-        font-size: 14px;
-      }
-    }
-  }
-}
-
-// Forumhome's Post Status
-.status-new {
-  background: #499551;
-}
-.status-old {
-  background: #9fc1a5;
-}
-
-// Who's online box
-#whos-online {
-  p {
-    margin: 0;
-    padding: 0;
-    font-size: 14px;
-    text-align: center;
-  }
-
-  p.active-text {
-    font-weight: bold;
-    margin-bottom: 10px;
-  }
-
-  div.box-body {
-    padding: 15px;
-  }
 }
 
 // Footer Content
