--- a/assets/css/forumhome.scss
+++ b/assets/css/forumhome.scss
@@ -1,41 +1,3 @@
-// Search Box
-#search {
-
-  input.search-box {
-    background: #fff url("../imgs/icons/search.png") no-repeat 10px 5px;
-    border: none;
-    width: 100%;
-    height: 30px;
-    padding-left: 40px;
-    padding-right: 40px;
-    padding-top: 5px;
-    padding-bottom: 5px;
-
-    -moz-box-sizing:border-box;
-    -webkit-box-sizing:border-box;
-    box-sizing:border-box;
-  }
-
-  input.search-box::-webkit-input-placeholder {
-    color: #9f9f9f;
-    font-size: 15px;
-    font-weight: normal;
-
-  }
-
-  input.search-box:-moz-placeholder { /* Firefox 18- */
-    color: #9f9f9f;
-  }
-
-  input.search-box::-moz-placeholder {  /* Firefox 19+ */
-    color: #9f9f9f;
-  }
-
-  input.search-box:-ms-input-placeholder {
-    color: #9f9f9f;
-  }
-}
-
 // Forumhome's Forum Listings
 #forums-list {
   border-bottom:1px solid #c6c6c7;
@@ -101,3 +63,30 @@
     padding: 15px;
   }
 }
+
+// Forum Status Keys
+#forums-status {
+  font-size: 12px;
+  margin: 0 auto;
+  width: 320px;
+
+  div.forum-status-new, div.forum-status-old {
+    width: auto;
+    float: left;
+    margin: 0 5px 15px 5px;
+
+    div.status-new-border {
+      border-bottom: 4px solid #499551;
+      width: 120px;
+      margin: 0 auto;
+      margin-top: 5px;
+    }
+    div.status-old-border {
+      border-bottom: 4px solid #a6c7ac;
+      width: 120px;
+      margin: 0 auto;
+      margin-top: 5px;
+    }
+  }
+}
+
