--- a/assets/css/menus.css
+++ b/assets/css/menus.css
@@ -5,18 +5,178 @@
 .mm-list > li > a, .mm-list > li > span {
   padding: 0; }
 
-#menu-left {
+.my-account {
   background: #333333;
   color: #ffffff; }
-  #menu-left div {
-    margin: 0;
-    padding: 0; }
-  #menu-left ul, #menu-left li {
-    margin: 0;
-    padding: 0; }
-  #menu-left div.avatar-box {
-    margin-top: 5px;
-    margin-left: 5px; }
-    #menu-left div.avatar-box div.avatar-img img {
-      float: left;
-      margin-right: 10px; }
+  .my-account .my-account-content {
+    padding: 0;
+    margin: 0; }
+    .my-account .my-account-content div.avatar-box {
+      background: #333333 url("../imgs/gradients/avatar-box.png") repeat-x;
+      height: 100px;
+      padding: 10px;
+      border-bottom: 1px solid #414141; }
+      .my-account .my-account-content div.avatar-box ul, .my-account .my-account-content div.avatar-box li {
+        margin: 0;
+        padding: 0; }
+      .my-account .my-account-content div.avatar-box div.avatar-img img {
+        float: left;
+        margin-right: 10px; }
+      .my-account .my-account-content div.avatar-box li.username {
+        font-weight: bold;
+        font-size: 15px;
+        margin-top: 20px; }
+      .my-account .my-account-content div.avatar-box li.usertitle {
+        font-size: 10px; }
+    .my-account .my-account-content div.my-account-links ul, .my-account .my-account-content div.my-account-links li {
+      margin: 0;
+      padding: 0;
+      list-style-type: none; }
+    .my-account .my-account-content div.my-account-links li {
+      border-bottom: 1px solid #414141; }
+      .my-account .my-account-content div.my-account-links li a:link, .my-account .my-account-content div.my-account-links li a:visited, .my-account .my-account-content div.my-account-links li a:hover {
+        padding: 10px 10px 10px 10px; }
+    .my-account .my-account-content div.my-account-links .menu-header {
+      background: #202020;
+      padding: 5px 10px;
+      font-weight: bold;
+      color: #595959; }
+    .my-account .my-account-content div.my-account-links span.notifications {
+      position: absolute;
+      right: 10px;
+      text-align: center;
+      min-width: 25px;
+      font-size: 14px;
+      font-weight: bold;
+      -webkit-border-radius: 2px;
+      -webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.7);
+      background-color: #dc0d17;
+      background-image: -webkit-gradient(linear, center top, center bottom, from(#fa3c45), to(#dc0d17));
+      background-image: -webkit-linear-gradient(#fa3c45, #dc0d17);
+      color: #fff;
+      min-height: 13px;
+      padding: 1px 3px;
+      text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.4);
+      width: 10px; }
+    .my-account .my-account-content div.my-account-links li.icon-messages a:before {
+      padding-right: 10px;
+      font-family: 'FontAwesome';
+      font-style: normal;
+      font-weight: 400;
+      line-height: 1;
+      -webkit-font-smoothing: antialiased;
+      font-size: 18px;
+      vertical-align: -1px;
+      content: "\f0e0";
+      padding-right: 6px; }
+    .my-account .my-account-content div.my-account-links li.icon-threads a:before {
+      padding-right: 10px;
+      font-family: 'FontAwesome';
+      font-style: normal;
+      font-weight: 400;
+      line-height: 1;
+      -webkit-font-smoothing: antialiased;
+      font-size: 18px;
+      vertical-align: -1px;
+      content: "\f09e";
+      padding-left: 3px;
+      padding-right: 10px; }
+    .my-account .my-account-content div.my-account-links li.icon-newposts a:before {
+      padding-right: 10px;
+      font-family: 'FontAwesome';
+      font-style: normal;
+      font-weight: 400;
+      line-height: 1;
+      -webkit-font-smoothing: antialiased;
+      font-size: 18px;
+      vertical-align: -1px;
+      content: "\f0a1"; }
+    .my-account .my-account-content div.my-account-links li.icon-pencil a:before {
+      padding-right: 10px;
+      font-family: 'FontAwesome';
+      font-style: normal;
+      font-weight: 400;
+      line-height: 1;
+      -webkit-font-smoothing: antialiased;
+      font-size: 18px;
+      vertical-align: -1px;
+      content: "\f040";
+      padding-left: 3px; }
+    .my-account .my-account-content div.my-account-links li.icon-lock a:before {
+      padding-right: 10px;
+      font-family: 'FontAwesome';
+      font-style: normal;
+      font-weight: 400;
+      line-height: 1;
+      -webkit-font-smoothing: antialiased;
+      font-size: 18px;
+      vertical-align: -1px;
+      content: "\f023";
+      padding-left: 3px;
+      padding-right: 13px; }
+    .my-account .my-account-content div.my-account-links li.icon-image a:before {
+      padding-right: 10px;
+      font-family: 'FontAwesome';
+      font-style: normal;
+      font-weight: 400;
+      line-height: 1;
+      -webkit-font-smoothing: antialiased;
+      font-size: 18px;
+      vertical-align: -1px;
+      content: "\f03e";
+      padding-right: 9px; }
+    .my-account .my-account-content div.my-account-links li.icon-signature a:before {
+      padding-right: 10px;
+      font-family: 'FontAwesome';
+      font-style: normal;
+      font-weight: 400;
+      line-height: 1;
+      -webkit-font-smoothing: antialiased;
+      font-size: 18px;
+      vertical-align: -1px;
+      content: "\f10d";
+      padding-right: 11px; }
+    .my-account .my-account-content div.my-account-links li.icon-wrench a:before {
+      padding-right: 10px;
+      font-family: 'FontAwesome';
+      font-style: normal;
+      font-weight: 400;
+      line-height: 1;
+      -webkit-font-smoothing: antialiased;
+      font-size: 18px;
+      vertical-align: -1px;
+      content: "\f0ad";
+      padding-right: 11px; }
+    .my-account .my-account-content div.my-account-links li.icon-gear a:before {
+      padding-right: 10px;
+      font-family: 'FontAwesome';
+      font-style: normal;
+      font-weight: 400;
+      line-height: 1;
+      -webkit-font-smoothing: antialiased;
+      font-size: 18px;
+      vertical-align: -1px;
+      content: "\f013";
+      padding-right: 13px; }
+    .my-account .my-account-content div.my-account-links li.icon-ignore a:before {
+      padding-right: 10px;
+      font-family: 'FontAwesome';
+      font-style: normal;
+      font-weight: 400;
+      line-height: 1;
+      -webkit-font-smoothing: antialiased;
+      font-size: 18px;
+      vertical-align: -1px;
+      content: "\f057";
+      padding-right: 13px; }
+    .my-account .my-account-content div.my-account-links li.icon-logout a:before {
+      padding-right: 10px;
+      font-family: 'FontAwesome';
+      font-style: normal;
+      font-weight: 400;
+      line-height: 1;
+      -webkit-font-smoothing: antialiased;
+      font-size: 18px;
+      vertical-align: -1px;
+      content: "\f08b";
+      padding-right: 11px; }
