--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,172 +1,50 @@
+//
+// vBulletin 3 Mobile Site
+//
 
-/*
-  Fonts
-*/
+// site style
+@import "sites/contractortalk";
 
-@import url(http://fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,400,700);
 
-/*
-  Globals
-*/
+@import "mixins";
+@import "fonts";
+
+// Globals
+html {
+  height: 100%;
+  min-height: 100%;
+  font-size: 100%;
+}
 
 body {
   margin: 0;
-  background: #556270;
-  color: #353d46;
-  //font: 18px/27px 'Oxygen', sans-serif;
-  font-family: 'Open Sans', sans-serif;
+  height: 100%;
+  min-height: 100%;
+  background: $body-bg-color;
+  color: $body-font-color;
+  font-family: $body-font-family;
+
+  a:link, a:visited, a:hover {
+    color: $body-link-color;
+    text-decoration: none;
+  }
 }
 
-h1, h2, h3 { color: #FF6B6B; margin: 0 0 27px; }
-
-// removes default bootstrap padding
+// removes default bootstrap padding & sets main width
 .container {
   padding-left: 0px;
   padding-right: 0px;
-  width: 100%;
+  width: $container-width;
 }
 
-/*
-  Header
-*/
-
-#header {
-  background: #354e6f;
-  height: 85px;
-  padding-top: 10px;
-  padding-bottom: 10px;
-
-
-  div.head-left {
-    float: left;
-    position: relative;
-    top: 15px;
-    left: 10px;
-  }
-
-  div.head-center {
-    text-align: center;
-  }
-
-  div.head-right {
-    float: right;
-    position: relative;
-    top: 15px;
-    right: 10px;
-
-    div.right-trigger {
-      width: 36px;
-      height: 36px;
-      background: #5b944c;
-      cursor: pointer;
-      border-radius: 5px;
-
-      -moz-transition: all 300ms;
-      -webkit-transition: all 300ms;
-      transition: all 300ms;
-
-      &:before {
-        content: '\002B';
-        display: inline-block;
-        width: 36px;
-        height: 36px;
-        color: white;
-        font-family: "ico";
-        font-style: normal;
-        font-size: 1.2em;
-        font-weight: normal;
-        font-variant: normal;
-        text-align: center;
-        text-transform: none;
-        line-height: 36px;
-      }
-
-      &:hover { background: #5b944c; &:before { color: #fcfeff; } }
-    }
-  }
-
-}
-
-/*
-  Search
-*/
-
-#search {
-
-  input.search-box {
-    background: #fff url("../imgs/icons/search.png") no-repeat 10px 5px;
-    border: none;
-    width: 100%;
-    height: 30px;
-    padding-left: 40px;
-    padding-right: 40px;
-    padding-top: 5px;
-    padding-bottom: 5px;
-
-    -moz-box-sizing:border-box;
-    -webkit-box-sizing:border-box;
-    box-sizing:border-box;
-  }
-
-  input.search-box::-webkit-input-placeholder {
-    color: #9f9f9f;
-    font-size: 15px;
-    font-weight: normal;
-
-  }
-
-  input.search-box:-moz-placeholder { /* Firefox 18- */
-    color: #9f9f9f;
-  }
-
-  input.search-box::-moz-placeholder {  /* Firefox 19+ */
-    color: #9f9f9f;
-  }
-
-  input.search-box:-ms-input-placeholder {
-    color: #9f9f9f;
-  }
-}
-
-
-.row-head {
-  background: #354e6f;
-  color: #ffffff;
-  font-size: 14px;
-  font-weight: bold;
-  padding: 5px;
-}
-
-/* forumhome's forum bit */
-.forum-bit {
-  padding-left: 5px;
-  border-bottom: 1px solid #ffffff;
-
-  div.forum-bit-wrap {
-    background: #e3e3e6;
-    padding: 10px;
-    cursor: pointer;
-
-    a:link, a:visited, :hover {
-      text-decoration: none;
-    }
-
-    div.forum-title {
-      color: #084b82;
-      font-weight: bold;
-      font-size: 16px;
-    }
-    div.forum-summary {
-      color: #333333;
-      font-size: 14px;
-    }
-  }
-}
-
-/* forumhome's forumbit post status (vbulletin lightbulbs) */
-.status-new {
-  background: #499551;
-}
-.status-old {
-  background: #9fc1a5;
-}
+// import stylesheets
+@import "reusables";
+@import "headfoot";
+@import "breadcrumbs";
+@import "forumhome";
+@import "forumdisplay";
+@import "showthread";
+@import "menus";
+@import "private";
+@import "reply";
+@import "login";
